update: actualizacion de documentos